Create docker image only when Build succeeds

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -38,6 +38,7 @@ jobs:
   docker:
     name: Build docker image
     runs-on: ubuntu-latest
+    needs: build
     steps:
       -
         name: Set up Docker Buildx
