--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -35,24 +35,36 @@ jobs:
     - name: Typescript test
       run: npm run test
       working-directory: ./DotnetTemplate.Web
-  docker:
-    name: Build docker image
+  # docker:
+  #   name: Build docker image
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     -
+  #       name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+  #     -
+  #       name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     -
+  #       name: Build and push
+  #       id: docker_build
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         push: true
+  #         tags: zkrishna/dotnettemplate:latest
+  deploy:
+    name: Deploy on Heroku
     runs-on: ubuntu-latest
     needs: build
     steps:
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: zkrishna/dotnettemplate:latest
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "k-dotnettemplate" #Must be unique in Heroku
+          heroku_email: "zkrishna2@gmail.com"         
+          usedocker: true
