--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -35,14 +35,14 @@ jobs:
     - name: Typescript test
       run: npm run test
       working-directory: ./DotnetTemplate.Web
-  # docker:
-  #   name: Build docker image
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     -
-  #       name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v1
+  docker:
+    name: Build docker image
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
   #     -
   #       name: Login to DockerHub
   #       uses: docker/login-action@v1 
