--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -59,7 +59,7 @@ jobs:
   deploy:
     name: Deploy on Heroku
     runs-on: ubuntu-latest
-    needs: docker
+    needs: build
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
